--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ text-align: center;}
 	width: 100%;
 	height: 450px;
 	text-align: center;
+	left: -10px;
 
 }
 
@@ -235,7 +236,7 @@ text-align: center;}
 
 .col-xs-12 input, textarea{
 	margin-top: 25px;
-	width: 325px;
+	width: 300px;
 	resize: none;
 	outline: none;
 	padding-top: 3px;
