--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+	margin: 0 auto;
+	padding: 0 auto;
+	box-sizing: border-box;
+}
+
+
 .carousel{
 	width: 100%;
 	max-height: 650px;
@@ -214,12 +221,14 @@ text-align: center;}
     padding-top: 6px;
 }
 
-
+.container{
+	width: 100%;
+}
 .col-xs-12{
 	width: 100%;
 	height: 450px;
 	text-align: center;
-	left: -10px;
+	left: px;
 
 }
 
@@ -359,3 +368,56 @@ footer a img{
 .social-media img:hover{
 	filter: grayscale(0%);
 }
+
+.navbar{
+	background-color: orange;
+}
+
+.nav li{
+	padding: 0 15px;
+	margin-left: 800px;
+	font-size: 18px;
+
+
+}
+
+.navbar-nav{
+	text-align: center;
+	width: auto;
+}
+
+
+.navbar .navbar-toggler{
+border:2px solid black;
+align-content: center;
+outline: none;
+}
+
+
+.nav-link::after{
+	content: '';
+	display: block;
+	margin: auto;
+	height: 2px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+
+.nav-link:hover:after{
+	width: 100%;
+	background: black;
+	text-decoration: none;
+	color: black;
+}
+
+.nav-item a{
+	color: white;
+}
+
+.nav-item a:hover{
+	color:white;
+}
+
+
+
