--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ text-align: center;}
 	width: 100%;
 	height: 450px;
 	text-align: center;
-	left: -13px;
+
 
 }
 
@@ -236,6 +236,8 @@ text-align: center;}
  .col-xs-12 form{
  	    display: inline-block;
  	    margin-top: 8px;
+ 	    	left: -11px;
+ 	    	position: relative;
 }
 
 .col-xs-12  input, textarea{
