--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ text-align: center;}
 	width: 100%;
 	height: 450px;
 	text-align: center;
+	position: relative;
 
 
 }
@@ -236,7 +237,6 @@ text-align: center;}
  .col-xs-12 form{
  	    display: inline-block;
  	    margin-top: 8px;
- 	    	left: -11px;
  	    	position: relative;
 }
 
@@ -247,7 +247,7 @@ text-align: center;}
 
 .col-xs-12 input, textarea{
 	margin-top: 25px;
-	width: 300px;
+	width: 285px;
 	resize: none;
 	outline: none;
 	padding-top: 3px;
