--- a/style.css
+++ b/style.css
@@ -14,13 +14,24 @@ margin: 0 auto;
 padding: 0 auto; 
 top: 25%;
 color: orange;
+text-align: center;
 }
 
 .carousel-caption h1{
-	font-size: 50px;
+	font-size: 5em;
 	font-family: 'Titillium Web', sans-serif;
 	color: white;
+	text-align: center;
+	display: block;
+	margin: 0 auto;
 
+}
+
+@media (max-width: 700px){
+	.carousel-caption h1{
+		font-size: 2.5em;
+		text-align: center;
+	}
 }
 
 
@@ -36,51 +47,7 @@ color: orange;
 	background-repeat: no-repeat;
 }
 
-.navigation{
-	width: 100%;
-	height: 50px;
-	background-color: #F29B34;
-	}
 
-.navigation ul li{
-	position: relative;
-	display: inline-block;
-	padding: 13px 35px 0px 35px;
-}
-
-.navigation a{
-	position: relative;
-	list-style: none;
-	text-decoration: none;
-	color:white;
-	font-weight: 35px;
-	font-size: 16px;
-
-}
-
-.navigation li a::after{
-	content:'';
-	display: block;
-	width: 0;
-	height: 0;
-	border-bottom: 2px solid transparent;
-    margin: 0 auto;
-    position: relative;
-    transition: 1s ease;
-}
-
-.navigation li a:hover::after{
-	width: 100%;
-	height: 1px;
-		border-bottom: 2px solid black;
-
-
-
-}
-
-.navigation ul{
-margin-left: 325px;
-}
 
 .section-tag{
 	width: 100%;
@@ -221,12 +188,16 @@ text-align: center;}
     padding-top: 6px;
 }
 
+.center-block{
+	margin: 0 auto;
+	display: block;
+}
 .container{
 	width: 100%;
 }
 .col-xs-12{
 	width: 100%;
-	height: 450px;
+	height: 430px;
 	text-align: center;
 	position: relative;
 
@@ -238,10 +209,13 @@ text-align: center;}
  	    display: inline-block;
  	    margin-top: 8px;
  	    	position: relative;
+ 	    	margin: 0 auto;
+
 }
 
 .col-xs-12  input, textarea{
 	display: block;
+	margin: 0 auto;
 }
 
 
@@ -253,6 +227,7 @@ text-align: center;}
 	padding-top: 3px;
 	border-color: black;
 	border: 1.5px solid;
+	position: relative;
 
 }
 
@@ -373,19 +348,30 @@ footer a img{
 
 .navbar{
 	background-color: orange;
+	border-radius: 0px;
 }
 
 .nav li{
-	padding: 0 15px;
-	margin-left: 800px;
-	font-size: 18px;
+	padding: 0 20px;
+	margin-left: 650px;
+	font-size: 17px;
 
 
 }
 
 .navbar-nav{
 	text-align: center;
-	width: auto;
+}
+
+
+@media(max-width: 700px){
+	.navbar-nav{
+		position: relative;
+		width: 40%;
+		text-align: center;
+		display: block;
+		margin: 0 auto;
+	}
 }
 
 
@@ -399,7 +385,7 @@ outline: none;
 .nav-link::after{
 	content: '';
 	display: block;
-	margin: auto;
+	margin: 0 auto;
 	height: 2px;
 	width: 0px;
 	background: transparent;
@@ -411,15 +397,20 @@ outline: none;
 	background: black;
 	text-decoration: none;
 	color: black;
+	margin: 0 auto;
+	padding: 0px;
 }
 
 .nav-item a{
 	color: white;
+
 }
 
 .nav-item a:hover{
 	color:white;
 }
+
+
 
 
 
