--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ text-align: center;
 
 }
 
-@media (max-width: 700px){
+@media (max-width: 800px){
 	.carousel-caption h1{
-		font-size: 2.5em;
+		font-size: 2.0em;
 		text-align: center;
 	}
 }
@@ -221,7 +221,7 @@ text-align: center;}
 
 .col-xs-12 input, textarea{
 	margin-top: 25px;
-	width: 285px;
+	width: 400px;
 	resize: none;
 	outline: none;
 	padding-top: 3px;
@@ -231,7 +231,20 @@ text-align: center;}
 
 }
 
+@media (max-width: 500px){
+	.col-xs-12 input, textarea{
+	width: 230px;
+	resize: none;
+	outline: none;
+	padding-top: 4px;
+	border-color: black;
+	border: 1.5px solid;
+	position: relative;
+	margin: 25px auto;
 
+
+}
+}
 
 .col-xs-12 input:focus{
 	transition: 1s all;
@@ -364,10 +377,10 @@ footer a img{
 }
 
 
-@media(max-width: 700px){
+@media(max-width: 1200px){
 	.navbar-nav{
 		position: relative;
-		width: 40%;
+		width: 50%;
 		text-align: center;
 		display: block;
 		margin: 0 auto;
